kustomize/workers/shipping-worker/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipping-worker
  namespace: workers
  labels:
    app: shipping-worker
spec:
  replicas: 0
  selector:
    matchLabels:
      app: shipping-worker
  template:
    metadata:
      labels:
        app: shipping-worker
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: shippingservice-worker-sa
      containers:
        - name: shipping-worker
          image: jukpozi/shippingservice:latest
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
